Icon changed in matches view

--- a/templates/matches.html
+++ b/templates/matches.html
@@ -23,7 +23,7 @@
             {{match.team_a_names[0] }} / {{ match.team_a_names[1]}}
             {% endif %}
                 {% if not match.result %}
-                <a href="result/{{match._id}}/a" class="btn btn-success"><i class="fas fa-beer"></i></a>
+                <a href="result/{{match._id}}/a" class="btn btn-success"><i class="fa fa-throphy"></i></a>
                 {% endif %}
 
             </td>
@@ -36,7 +36,7 @@
             {% endif %}
 
                 {% if not match.result %}
-                <a href="result/{{match._id}}/b" class="btn btn-success"><i class="fas fa-beer"></i></a>
+                <a href="result/{{match._id}}/b" class="btn btn-success"><i class="fa fa-trophy"></i></a>
                 {% endif %}
             </td>
             {% if match.result %}
